--- a/app/views/specs.haml
+++ b/app/views/specs.haml
@@ -7,9 +7,7 @@
     <link rel="stylesheet" type="text/css" href="jasmine/jasmine.css">
     <script type="text/javascript" src="jasmine/jasmine.js"></script>
     <script type="text/javascript" src="jasmine/jasmine-html.js"></script>
-
-    - third_party_js_files.each do |js|
-      %script(type="text/javascript" src="#{js}")
+    %script(type="text/javascript" src="third-party-js/underscore-min.js")
 
     - app_files.each do |js|
       %script(type="text/javascript" src="#{js}")
