--- a/app/views/main.haml
+++ b/app/views/main.haml
@@ -3,16 +3,29 @@
   %head
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="themes/Miner.min.css" />
-    <link rel="stylesheet" href="themes/jquery.mobile.structure-1.2.0.min.css" />
+    <link rel="stylesheet" href="/themes/Miner.min.css" />
+    <link rel="stylesheet" href="/themes/jquery.mobile.structure-1.2.0.min.css" />
+    <link rel="stylesheet" href="css/game.less" />
     <script src="third-party-js/jquery-1.8.2.min.js"></script>
     <script src="third-party-js/jquery.mobile-1.2.0.min.js"></script>
+    %script(type="text/javascript" src="third-party-js/underscore-min.js")
+    %script(type="text/javascript" src="third-party-js/backbone-min.js")
+    - app_files.each do |js|
+      %script(type="text/javascript" src="#{js}")
 
   %body
-    %div{"data-role" => "page"}
-      %div{"data-position" => "inline", "data-role" => "header"}
-        %h1 It Worked!
-      %div{"data-role" => "content"}
+    #game(data-role="page")
+      %div(data-role="header")
+        %h1 $240842
+        %a.ui-btn-right(href="#settings" data-icon="gear" data-transition="slidedown") Settings
+      %div(data-role="content")
+        .grid
+
+    #settings(data-role="page")
+      %div(data-role="header")
+        %a(data-rel="back" data-role="button") Back
+        %h1 Settings
+      %div(data-role="content")
         %label{:for => "slider1"} Input slider:
         %input#slider1{"data-theme" => "a", :max => "100", :min => "0", :name => "slider1", :type => "range", :value => "50"}/
         %br/
@@ -26,12 +39,3 @@
           %label{:for => "radio-choice-3"} Hamster
           %input#radio-choice-4{:name => "radio-choice", :type => "radio", :value => "choice-4"}/
           %label{:for => "radio-choice-4"} Lizard
-
-    :javascript
-      $(function() {
-        $.event.special.swipe.horizontalDistanceThreshold = 300;
-        $(document).swipe(function() {
-          $('body').remove();
-          window.location.reload();
-        });
-      });
