--- a/app/views/main.haml
+++ b/app/views/main.haml
@@ -9,6 +9,7 @@
     <script src="third-party-js/jquery-1.8.2.min.js"></script>
     <script src="third-party-js/jquery.mobile-1.2.0.min.js"></script>
     %script(type="text/javascript" src="third-party-js/underscore-min.js")
+    %script(type="text/javascript" src="third-party-js/underscore.string.min.js")
     %script(type="text/javascript" src="third-party-js/backbone-min.js")
     - app_files.each do |js|
       %script(type="text/javascript" src="#{js}")
@@ -16,10 +17,16 @@
   %body
     #game(data-role="page")
       %div(data-role="header")
-        %h1 $240842
+        %h1.money $240842
         %a.ui-btn-right(href="#settings" data-icon="gear" data-transition="slidedown") Settings
       %div(data-role="content")
         .grid
+        .build-panel
+          %select
+            %option(value="-1") Build some shit
+            %option(value="0") Bulldozer
+            %option(value="1") Mine
+            %option(value="7") Tube
 
     #settings(data-role="page")
       %div(data-role="header")
