--- a/app/views/specs.haml
+++ b/app/views/specs.haml
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="jasmine/jasmine.js"></script>
     <script type="text/javascript" src="jasmine/jasmine-html.js"></script>
     %script(type="text/javascript" src="third-party-js/underscore-min.js")
+    %script(type="text/javascript" src="third-party-js/backbone-min.js")
 
     - engine_files.each do |js|
       %script(type="text/javascript" src="#{js}")
