--- a/app/views/main.haml
+++ b/app/views/main.haml
@@ -6,13 +6,11 @@
     <link rel="stylesheet" href="/themes/Miner.min.css" />
     <link rel="stylesheet" href="/themes/jquery.mobile.structure-1.2.0.min.css" />
     <link rel="stylesheet" href="css/game.less" />
-    <script src="third-party-js/jquery-1.8.2.min.js"></script>
+    <script src="third-party-js/jquery-2.1.3.min.js"></script>
     <script src="third-party-js/jquery.mobile-1.2.0.min.js"></script>
-    %script(type="text/javascript" src="third-party-js/underscore-min.js")
-    %script(type="text/javascript" src="third-party-js/underscore.string.min.js")
+    %script(type="text/javascript" src="third-party-js/lodash.min.js")
     %script(type="text/javascript" src="third-party-js/backbone-min.js")
-    - app_files.each do |js|
-      %script(type="text/javascript" src="#{js}")
+    %script(type="text/javascript" src="miner-generated.js")
 
   %body
     #game(data-role="page")
