The game! It has a UI!

--- a/app/css/game.less
+++ b/app/css/game.less
@@ -35,13 +35,15 @@ html {
   font-size: 24px;
 
   .row {
+    vertical-align: middle;
+
     .label {
       width: 100px;
       display: inline-block;
       text-align: right;
     }
     .value {
-      width: 100px;
+      width: 200px;
       display: inline-block;
     }
   }
