--- a/app/views/main.haml
+++ b/app/views/main.haml
@@ -28,14 +28,13 @@
           .label morale
           .value.morale
         .row
-          .label wages
+          .label wage
           .value.wages
         .row
           .label ore
           .value.ore
-        .row
-          .label ore price
-          .value.ore-price
+            %span.ore-ticker
+            %button.sell-ore Sell
 
         .build-panel
           %select
