--- a/app/css/game.less
+++ b/app/css/game.less
@@ -1,11 +1,11 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: monospace;
 }
 
 html {
   font-size: 16px;
-  font-family: sans-serif;
 }
 
 .world {
@@ -35,7 +35,7 @@ html {
 
 .right-pane {
   width: 500px;
-  font-size: 24px;
+  font-size: 20px;
 
   .row {
     vertical-align: middle;
@@ -46,7 +46,7 @@ html {
       text-align: right;
     }
     .value {
-      width: 300px;
+      width: 325px;
       display: inline-block;
     }
   }
@@ -60,14 +60,14 @@ html {
     margin: 10px;
     text-align: center;
     select {
-      font-size: 24px;
+      font-size: 20px;
     }
   }
 
   .advance-to-next-day {
     margin: 20px;
     padding: 10px;
-    font-size: 36px;
+    font-size: 32px;
   }
 
   .sell-ore {
