--- a/app/css/game.less
+++ b/app/css/game.less
@@ -48,6 +48,7 @@ html {
     .value {
       width: 325px;
       display: inline-block;
+      text-align: left;
     }
   }
 
@@ -72,6 +73,13 @@ html {
 
   .sell-ore {
     padding: 5px;
+  }
+
+  .workers {
+    text-align: center;
+    .interview, .pass, .hire {
+      padding: 5px;
+    }
   }
 }
 
