--- a/app/views/main.haml
+++ b/app/views/main.haml
@@ -61,6 +61,29 @@
               %th ops
               %th morale
 
+          %button.interview Interview (100z, max 3 / day)
+          .interview-stats
+            .row
+              .label name
+              .value.name
+            .row
+              .label gender
+              .value.gender
+            .row
+              .label mining
+              .value.mining
+            .row
+              .label tech
+              .value.tech
+            .row
+              .label medical
+              .value.medical
+            .row
+              .label ops
+              .value.ops
+            %button.pass Pass
+            %button.hire Hire! 
+
         %hr
 
         %button.advance-to-next-day See what tomorrow brings
