--- a/app/css/game.less
+++ b/app/css/game.less
@@ -1,11 +1,24 @@
+@font-face {
+  font-family: Pixelmix;
+  src: url(/fonts/pixelmix.ttf);
+}
+
+@font-face {
+  font-family: pixelmix;
+  src: url(/fonts/pixelmix_bold.ttf);
+  font-weight: bold;
+}
+
 * {
   margin: 0;
   padding: 0;
-  font-family: monospace;
+  font-family: pixelmix;
+  font-smooth: never;
+  -webkit-font-smoothing: none;
 }
 
 html {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .world {
@@ -21,7 +34,7 @@ html {
     height: @height;
     line-height: @height;
     white-space: nowrap;
-    font-size: 10px;
+    font-size: 12px;
     border: 1px solid;
     text-align: center;
   }
@@ -35,7 +48,7 @@ html {
 
 .right-pane {
   width: 500px;
-  font-size: 20px;
+  font-size: 18px;
 
   .row {
     vertical-align: middle;
@@ -61,14 +74,14 @@ html {
     margin: 10px;
     text-align: center;
     select {
-      font-size: 20px;
+      font-size: 18px;
     }
   }
 
   .advance-to-next-day {
     margin: 20px;
     padding: 10px;
-    font-size: 32px;
+    font-size: 30px;
   }
 
   .sell-ore {
@@ -77,6 +90,15 @@ html {
 
   .workers {
     text-align: center;
+
+    table {
+      width: 100%;
+    }
+
+    th {
+      font-weight: inherit;
+    }
+
     .interview, .pass, .hire {
       padding: 5px;
     }
