--- a/app/views/main.haml
+++ b/app/views/main.haml
@@ -57,7 +57,6 @@
               %th name
               %th mining
               %th tech
-              %th medical
               %th ops
               %th morale
 
@@ -76,9 +75,6 @@
               .label tech
               .value.tech
             .row
-              .label medical
-              .value.medical
-            .row
               .label ops
               .value.ops
             %button.pass Pass
@@ -87,3 +83,5 @@
         %hr
 
         %button.advance-to-next-day See what tomorrow brings
+
+        %canvas#myCanvas
