Worker capacity, saving and loading!!

--- a/app/views/main.haml
+++ b/app/views/main.haml
@@ -41,6 +41,9 @@
         .row
           .label ops
           .value.operations
+        .row
+          .label workers
+          .value.worker-capacity
 
         %hr
 
@@ -84,4 +87,4 @@
 
         %button.advance-to-next-day See what tomorrow brings
 
-        %canvas#myCanvas
+        %button.new-game New Game
