Worker capacity mechanic. Made wages more expensive.

--- a/app/css/game.less
+++ b/app/css/game.less
@@ -1,11 +1,11 @@
 @font-face {
   font-family: Pixelmix;
-  src: url(/fonts/pixelmix.ttf);
+  src: url(../fonts/pixelmix.ttf);
 }
 
 @font-face {
   font-family: pixelmix;
-  src: url(/fonts/pixelmix_bold.ttf);
+  src: url(../fonts/pixelmix_bold.ttf);
   font-weight: bold;
 }
 
