--- a/app/views/main.haml
+++ b/app/views/main.haml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     -#<link rel="stylesheet" href="/themes/Miner.min.css" />
     -#<link rel="stylesheet" href="/themes/jquery.mobile.structure-1.2.0.min.css" />
-    <link rel="stylesheet" href="css/game.less" />
+    <link rel="stylesheet" type="text/css" href="css/game.css" />
     <script src="third-party-js/jquery-2.1.3.min.js"></script>
     -#<script src="third-party-js/jquery.mobile-1.2.0.min.js"></script>
     %script(type="text/javascript" src="third-party-js/lodash.min.js")
