Base files for libgdx.

--- a/app/views/main.haml
+++ b/app/views/main.haml
@@ -2,7 +2,7 @@
 %html{html_attrs()}
   %head
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     -#<link rel="stylesheet" href="/themes/Miner.min.css" />
     -#<link rel="stylesheet" href="/themes/jquery.mobile.structure-1.2.0.min.css" />
     <link rel="stylesheet" type="text/css" href="css/game.css" />
